libnd4j/include/legacy/NativeOps.h

SD_LIB_EXPORT const char *getDeviceName(int device);
SD_LIB_EXPORT void initializeDevicesAndFunctions() ;
SD_LIB_EXPORT sd::Pointer mallocHost(sd::LongType memorySize, int flags) ;
SD_LIB_EXPORT sd::Pointer mallocDevice(sd::LongType memorySize, int deviceId, int flags) ;
SD_LIB_EXPORT int freeHost(sd::Pointer pointer) ;
SD_LIB_EXPORT int freeDevice(sd::Pointer pointer, int deviceId) ;
SD_LIB_EXPORT sd::Pointer createContext() ;
SD_LIB_EXPORT sd::Pointer createStream() ;
SD_LIB_EXPORT sd::Pointer createEvent() ;
SD_LIB_EXPORT int registerEvent(sd::Pointer event, sd::Pointer stream) ;
SD_LIB_EXPORT int setDevice(int deviceId) ;
SD_LIB_EXPORT sd::LongType getDeviceFreeMemory(int device) ;
SD_LIB_EXPORT sd::LongType getDeviceTotalMemory(int device) ;
SD_LIB_EXPORT int memcpyAsync(sd::Pointer dst, sd::Pointer src, sd::LongType size, int flags, sd::Pointer reserved) ;
SD_LIB_EXPORT int memsetAsync(sd::Pointer dst, int value, sd::LongType size, int flags, sd::Pointer reserved) ;
SD_LIB_EXPORT int destroyEvent(sd::Pointer event) ;
SD_LIB_EXPORT int streamSynchronize(sd::Pointer stream) ;
SD_LIB_EXPORT int eventSynchronize(sd::Pointer event) ;
SD_LIB_EXPORT int ompGetMaxThreads() ;
SD_LIB_EXPORT int ompGetNumThreads() ;
SD_LIB_EXPORT void setOmpNumThreads(int threads) ;
SD_LIB_EXPORT int getDeviceMajor(int device) ;
SD_LIB_EXPORT int getDeviceMinor(int device) ;
SD_LIB_EXPORT int memcpyConstantAsync(sd::LongType dst, sd::Pointer src, sd::LongType size, int flags, sd::Pointer reserved) ;
SD_LIB_EXPORT void setOmpMinThreads(int threads) ;
SD_LIB_EXPORT int getDevice() ;